--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="#">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Features</a>
@@ -28,9 +28,14 @@
 					<a class="nav-link" href="#">Pricing</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link disabled" href="#">Disabled</a>
+					<a class="nav-link" href="#">Disabled</a>
 				</li>
 			</ul>
+            <ul class="navbar-nav ml-auto">
+				<li class="nav-item active">
+					<a class="nav-link text-danger" href="#">toTheRigth</a>
+				</li>
+            </ul>
 		</div>
 	</nav>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
