--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-dark navbar-expand-lg bg-dark px-1">
 		<a class="navbar-brand" href="#">Navbar</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,11 +31,6 @@
 					<a class="nav-link" href="#">Disabled</a>
 				</li>
 			</ul>
-            <ul class="navbar-nav ml-auto">
-				<li class="nav-item active">
-					<a class="nav-link text-danger" href="#">toTheRigth</a>
-				</li>
-            </ul>
 		</div>
     </nav>
 <div class="container d-block my-5 p-5">
