--- a/index.html
+++ b/index.html
@@ -34,44 +34,45 @@
 			</ul>
 		</div>
 	</nav>
-    <div class="container d-block my-5 p-5">
-        <div class="row" id="first">
-            <div class="col-sm-8">
-                <h1 class="d-inline">This First Heading <p class="text-muted d-inline">Will Catch Your Eyes</p></h1>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                    sunt in culpa qui officia deserunt mollit anim id est laborum
-                </p>					
-            </div>
-            <div class="col-sm-4">
-                <div class="card border-0">
-                    <a href="https://placeholder.com"><img class="rounded-circle img-fluid float-rigth" src="https://via.placeholder.com/400"></a>
-                </div>
-            </div>
-        </div>
-    <div>
+	<div class="container d-block my-5 p-5">
+		<div class="row" id="first">
+		    <div class="col-sm-8">
+			<h1 class="d-inline">This First Heading <p class="text-muted d-inline">Will Catch Your Eyes</p></h1>
+			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+			    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+			    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+			    sunt in culpa qui officia deserunt mollit anim id est laborum
+			</p>					
+		    </div>
+		    <div class="col-sm-4">
+			<div class="card border-0">
+			    <a href="https://placeholder.com"><img class="rounded-circle img-fluid float-rigth" src="https://via.placeholder.com/400"></a>
+			</div>
+		    </div>
+		</div>
+    	<div>
 	<div class="container d-block my-5 p-5" id="second-container">
-			<div class="row" id="second">
-				<div class="col-sm-3 pr-1">
-					<div class="card border-0">
-						<a href="https://placeholder.com"><img class="rounded-circle img-fluid float-rigth" src="https://via.placeholder.com/400"></a>
-					</div>
-				</div>
-				<div class="col-sm-9 pl-0">
-					<h1 class="d-inline">This Second Heading <p class="text-muted d-inline">Is Pretty Cool Too</p>
-					</h1>
-					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-						et dolore magna aliqua.
-						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure
-						dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-						sint occaecat cupidatat non proident,
-						sunt in culpa qui officia deserunt mollit anim id est laborum
-					</p>
+		<div class="row" id="second">
+			<div class="col-sm-3 pr-1">
+				<div class="card border-0">
+					<a href="https://placeholder.com"><img class="rounded-circle img-fluid float-rigth" src="https://via.placeholder.com/400"></a>
 				</div>
 			</div>
+			<div class="col-sm-9 pl-0">
+				<h1 class="d-inline">
+					This Second Heading <p class="text-muted d-inline">Is Pretty Cool Too</p>
+				</h1>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+					et dolore magna aliqua.
+					Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure
+					dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+					sint occaecat cupidatat non proident,
+					sunt in culpa qui officia deserunt mollit anim id est laborum
+				</p>
+			</div>
 		</div>
+	</div>
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 				crossorigin="anonymous"></script>
